fix:z-index

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -38,7 +38,7 @@
     &__text-container {
       // margin-top: -9vw;
       position: absolute;
-      z-index: 1;
+      z-index: 2;
       padding: 0 20px;
       color: #fff;
       top: 50%;
